--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="result"></div>
 
     <script>
-      const webAppURL = "YOUR_DEPLOYED_SCRIPT_URL_HERE";
+      const webAppURL = "https://script.google.com/macros/s/AKfycbyfMvfUiOhfueY3_933bOPfthaNOKUX37DGqhBTUU-o0y1m1S_cU7LjICeABdS_lnaA0w/exec";
 
       async function fetchOrderDetails() {
         const orderId = document.getElementById("orderId").value.trim();
